--- a/src/pages/Consultation/consultation.scss
+++ b/src/pages/Consultation/consultation.scss
@@ -41,6 +41,13 @@
           overflow-y: auto;
         }
 
+        &--show-options {
+          @media screen and (min-width: 1024px) {
+            height: calc(70vh - 15rem) !important;
+            margin-top: 20rem;
+          }
+        }
+
         & .message,
         & .system-message {
           margin-bottom: $spacing_1_8;
@@ -110,5 +117,12 @@
     & p {
       margin-left: $spacing_1_8;
     }
+  }
+
+  &__options-container {
+    background-color: $color_white_ff;
+    z-index: 2;
+    width: 100%;
+    top: 0;
   }
 }
