Fix: the redirection to the privacy policy from the RequireDataAgreement modal

--- a/src/modals/RequireDataAgreement/require-data-agreement.scss
+++ b/src/modals/RequireDataAgreement/require-data-agreement.scss
@@ -24,7 +24,7 @@
     align-self: flex-start;
     margin-top: $spacing_1_2;
 
-    & a {
+    &__link {
       color: $color_primary_20809e;
       font-weight: $font_semi_bold;
       cursor: pointer;
