--- a/src/backdrops/SelectConsultation/select-consultation.scss
+++ b/src/backdrops/SelectConsultation/select-consultation.scss
@@ -13,6 +13,24 @@
     flex: 0.1;
   }
 
+  &__coupon-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-end;
+    padding-top: $spacing_0_8;
+
+    & .input-container {
+      width: 20rem;
+      margin-right: $spacing_2_4;
+    }
+
+    & .error-message {
+      display: block;
+      width: 100%;
+    }
+  }
+
   &__content-container {
     display: flex;
     flex-direction: column;
