Add: confirm password field to the RegisterAnonymous and RegisterEmail

--- a/src/blocks/RegisterAnonymous/register-anonymous.scss
+++ b/src/blocks/RegisterAnonymous/register-anonymous.scss
@@ -57,6 +57,7 @@
           }
           &-password {
             margin-top: $spacing_1_2;
+            margin-bottom: $spacing_1_2;
           }
         }
 
