--- a/src/blocks/RegisterAnonymous/register-anonymous.scss
+++ b/src/blocks/RegisterAnonymous/register-anonymous.scss
@@ -2,10 +2,10 @@
 
 .register-anonymous {
   // 100vh - height of header - the padding-top
-  @include full-height-page(calc($spacing_12_0));
+  @include full-height-page-navbar();
 
   @media screen and (min-width: $screen_md) {
-    @include full-height-page(calc($spacing_12_8));
+    @include full-height-page-navbar();
   }
 
   & .container {
