Refactor: Add language selector in registration

--- a/src/blocks/RegisterEmail/register-email.scss
+++ b/src/blocks/RegisterEmail/register-email.scss
@@ -11,6 +11,14 @@
     place-items: center;
     min-height: 90vh;
 
+    &__language-dropdown {
+      text-align: left;
+
+      & .dropdown-content {
+        text-align: center;
+      }
+    }
+
     & .input-container:not(:first-of-type) {
       padding-top: $spacing_2_4;
     }
