Add: further styling for login screen

--- a/src/blocks/Login/login.scss
+++ b/src/blocks/Login/login.scss
@@ -16,6 +16,10 @@
       min-height: 75vh;
     }
 
+    @media screen and (min-width: $screen-lg) {
+      min-height: 65vh;
+    }
+
     &__logo-item {
       display: flex;
       flex-direction: column;
