--- a/src/blocks/Login/login.scss
+++ b/src/blocks/Login/login.scss
@@ -8,22 +8,13 @@
   }
 
   &__grid {
-    min-height: 85vh;
     place-items: center;
     text-align: left;
-
-    @media screen and (min-width: $screen-md) {
-      min-height: 75vh;
-    }
-
-    @media screen and (min-width: $screen-lg) {
-      min-height: 65vh;
-    }
+    margin-top: $spacing_5_0;
 
     &__logo-item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      text-align: center;
+      margin-bottom: 2rem;
     }
 
     &__inputs-item {
