Refactor: RegisterPreview page background styling

--- a/src/pages/RegisterPreview/register-preview.scss
+++ b/src/pages/RegisterPreview/register-preview.scss
@@ -8,5 +8,6 @@
     background-image: url(../assets/background-spiral-2.png);
     background-repeat: no-repeat;
     background-size: cover;
+    min-width: 35rem;
   }
 }
