--- a/src/blocks/Page/page.scss
+++ b/src/blocks/Page/page.scss
@@ -2,6 +2,7 @@
 
 .page {
   padding-top: $spacing_6_6;
+  min-width: 38rem;
 
   &--no-additional-top-padding {
     padding-top: 0;
@@ -21,9 +22,11 @@
 
   &__header {
     align-items: center;
+    justify-content: space-between;
     display: flex;
     flex: 1;
     padding: $spacing_3_2 $spacing_1_6 $spacing_1_6 $spacing_2_4;
+    min-width: calc(38rem - ($spacing_1_6 + $spacing_2_4));
 
     @media screen and (min-width: $screen-md) {
       padding-top: $spacing_5_0;
@@ -34,6 +37,12 @@
       padding-top: $spacing_5_0;
       padding-left: $spacing_23_0;
       padding-right: $spacing_23_0;
+    }
+
+    &__text-container {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
     }
 
     &__language {
