--- a/src/pages/InformationPortal/information-portal.scss
+++ b/src/pages/InformationPortal/information-portal.scss
@@ -12,6 +12,11 @@
     @media screen and (min-width: $screen-md) {
       height: 17.4rem;
     }
+
+    & h3,
+    & p {
+      @include themify($themes, "color", "color_3d527b_white");
+    }
   }
 
   & .view-all-button {
