Remove: ProviderOverview block button background

--- a/src/blocks/ProviderOverview/provider-overview.scss
+++ b/src/blocks/ProviderOverview/provider-overview.scss
@@ -9,7 +9,7 @@
     // padding-bottom: calc(5vh + 4.8rem + 1rem);
     position: sticky;
     bottom: 0;
-    background: $gradient_transparent;
+    // background: $gradient_transparent;
     display: flex;
     align-items: center;
     justify-content: center;
