Refactor: SaveAccessTokenCodeConfirmation styling on dark mode

--- a/src/modals/SaveAccessCodeConfirmation/save-access-code-confirmation.scss
+++ b/src/modals/SaveAccessCodeConfirmation/save-access-code-confirmation.scss
@@ -27,4 +27,12 @@
       cursor: pointer;
     }
   }
+
+  &__access-token--dark {
+    & .access-token-container {
+      & h4 {
+        color: $color_primary_20809e;
+      }
+    }
+  }
 }
