Refactor: FilterProviders and SafetyFeedback blocks and Consultation page styling on dark mode

--- a/src/blocks/SafetyFeedback/safety-feedback.scss
+++ b/src/blocks/SafetyFeedback/safety-feedback.scss
@@ -1,6 +1,10 @@
 @import "@USupport-components-library/styles";
 
 .safety-feedback {
+  &--dark {
+    background-color: $color_black_37;
+  }
+
   &__grid {
     text-align: left;
     place-items: center;
