--- a/src/pages/Consultation/consultation.scss
+++ b/src/pages/Consultation/consultation.scss
@@ -6,7 +6,7 @@
   max-height: 100vh;
 
   @media screen and (min-width: $screen-md) {
-    margin-top: 9.6rem;
+    padding-top: 9.6rem;
   }
 
   &__container {
@@ -80,15 +80,19 @@
   }
 
   &__chat-backdrop {
-    height: 60vh;
+    // height: 60vh;
     padding-bottom: $spacing_1_6;
+
+    &--dark {
+      background-color: $color_black_31;
+    }
 
     & .base-modal__body {
       position: relative;
     }
 
     &.backdrop__shown {
-      top: 40vh;
+      top: 30vh;
     }
 
     & .send-message {
@@ -127,7 +131,6 @@
   }
 
   &__options-container {
-    background-color: $color_white_ff;
     z-index: 2;
     width: 100%;
     top: 0;
