Refactor: Consultations block and SafetyFeedback to take the height of the page

--- a/src/blocks/SafetyFeedback/safety-feedback.scss
+++ b/src/blocks/SafetyFeedback/safety-feedback.scss
@@ -1,6 +1,8 @@
 @import "@USupport-components-library/styles";
 
 .safety-feedback {
+  height: 100vh;
+
   &--dark {
     background-color: $color_black_37;
   }
