--- a/src/blocks/Consultations/consultations.scss
+++ b/src/blocks/Consultations/consultations.scss
@@ -1,6 +1,8 @@
 @import "@USupport-components-library/styles";
 
 .consultations {
+  @include full-height-page-navbar;
+
   &__grid {
     padding-top: $spacing_2_4;
     padding-bottom: $spacing_6_4;
