--- a/src/blocks/MoodTrackHistory/mood-track-history.scss
+++ b/src/blocks/MoodTrackHistory/mood-track-history.scss
@@ -1,6 +1,8 @@
 @import "@USupport-components-library/styles";
 
 .mood-track-history {
+  @include full-height-page-navbar;
+
   &__content-container {
     display: flex;
     flex-direction: row;
