--- a/src/blocks/SelectProvider/select-provider.scss
+++ b/src/blocks/SelectProvider/select-provider.scss
@@ -1,6 +1,8 @@
 @import "@USupport-components-library/styles";
 
 .select-provider {
+  @include full-height-page-navbar;
+
   &__grid {
     place-items: center;
     padding-top: $spacing_3_0;
