--- a/src/blocks/SafetyFeedback/safety-feedback.scss
+++ b/src/blocks/SafetyFeedback/safety-feedback.scss
@@ -61,6 +61,26 @@
         margin-top: $spacing_0_8;
         width: 40%;
       }
+
+      &__emoticon-container {
+        margin-top: $spacing_0_8;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        & .small-text {
+          text-align: center;
+        }
+      }
     }
+
+    &__slider {
+      padding-top: $spacing_1_0;
+    }
+  }
+
+  &__question-item {
+    width: 100%;
+    max-width: 36.8rem;
   }
 }
