Fix: remove navbar and footer while in consultation

--- a/src/blocks/VideoRoom/video-room.scss
+++ b/src/blocks/VideoRoom/video-room.scss
@@ -48,8 +48,8 @@
         // width: calc(100vw - 50rem);
         width: 100%;
         border-radius: 2.5rem;
-        // max-height: 80vh;
-        max-height: calc(100vh - 15rem);
+        max-height: 95vh;
+        // max-height: calc(100vh - 15rem);
       }
     }
 
