Add: a dropdown to filter the answers by language in the MyQa

--- a/src/blocks/MyQA/my-qa.scss
+++ b/src/blocks/MyQA/my-qa.scss
@@ -11,6 +11,13 @@
       width: auto;
       padding-top: $spacing_2_0;
     }
+
+    &__language-dropdown {
+      width: 34.4rem;
+      text-align: left;
+      margin-bottom: $spacing_1_2;
+      margin-top: $spacing_1_2;
+    }
   }
 
   &__button-item {
