--- a/src/backdrops/SelectConsultation/select-consultation.scss
+++ b/src/backdrops/SelectConsultation/select-consultation.scss
@@ -13,6 +13,11 @@
     flex: 0.1;
   }
 
+  &__no-slots {
+    text-align: center;
+    padding-top: $spacing_3_2;
+  }
+
   &__coupon-container {
     display: flex;
     flex-wrap: wrap;
