--- a/src/blocks/MyQA/my-qa.scss
+++ b/src/blocks/MyQA/my-qa.scss
@@ -22,7 +22,11 @@
 
   &__button-item {
     place-self: center;
+
     @media screen and (min-width: $screen-md) {
+      justify-self: center;
+    }
+    @media screen and (min-width: $screen-lg) {
       justify-self: end;
     }
   }
@@ -31,31 +35,66 @@
     align-items: center;
     justify-items: stretch;
 
+    &__search-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      @media screen and (min-width: $screen-md) {
+        flex-direction: row;
+      }
+      @media screen and (min-width: $screen-lg) {
+        flex-direction: row;
+        justify-content: flex-start;
+      }
+
+      &__input {
+        margin-bottom: $spacing_1_6;
+        @media screen and (min-width: $screen-md) {
+          margin-right: $spacing_1_6;
+          margin-bottom: 0;
+        }
+      }
+    }
+
+    &__filter-button-item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin-top: $spacing_2_2;
+
+      @media screen and (min-width: $screen-md) {
+        flex-direction: row;
+      }
+      @media screen and (min-width: $screen-lg) {
+        justify-content: flex-start;
+      }
+    }
+
     &__filter-button {
-      margin-top: $spacing_1_6;
-      float: right;
+      margin-block: $spacing_1_6;
+      margin-inline: auto;
+
+      @media screen and (min-width: $screen-md) {
+        margin-top: 0;
+        margin-left: $spacing_1_6;
+      }
     }
   }
 
   &__ask-question-button {
     margin-top: $spacing_1_6;
     max-width: 10rem;
-    float: right;
-  }
+    margin-inline: auto;
 
-  &__answers-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: $spacing_4_6;
-
-    &__no-questions {
-      margin: $spacing_2_4 auto;
+    @media screen and (min-width: $screen-md) {
+      max-width: 34rem;
     }
-  }
-
-  &__answer {
-    margin-top: $spacing_2_4;
+    @media screen and (min-width: $screen-lg) {
+      margin-top: 0;
+    }
   }
 
   &__search-input-container {
@@ -76,5 +115,22 @@
         margin: 0;
       }
     }
+  }
+
+  &__questions-item {
+    &__no-data {
+      padding-bottom: $spacing_4_0;
+    }
+  }
+
+  &__answers-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: $spacing_4_6;
+  }
+
+  &__answer {
+    margin-top: $spacing_2_4;
   }
 }
