Add: not found state for podcast and video

--- a/src/pages/VideoInformation/video-information.scss
+++ b/src/pages/VideoInformation/video-information.scss
@@ -2,6 +2,8 @@
 @import "@USupport-components-library/styles";
 
 .page__video-information {
+  @include full-height-page-navbar;
+
   &__more-videos {
     padding-top: 32px;
     padding-bottom: 32px;
