Fix: invisible text and padding

--- a/src/pages/Videos/videos.scss
+++ b/src/pages/Videos/videos.scss
@@ -1,6 +1,6 @@
 /* Videos styles */
-@import '@USupport-components-library/styles';
+@import "@USupport-components-library/styles";
 
-.page__videos{
+.page__videos {
+  @include full-height-page-navbar;
 }
-
