--- a/src/blocks/Videos/videos.scss
+++ b/src/blocks/Videos/videos.scss
@@ -22,7 +22,7 @@
 
   &__videos-item {
     padding-top: 12px;
-    padding-bottom: 8px;
+    padding-bottom: 60px;
 
     @media screen and (min-width: 1366px) {
       padding-top: 24px;
@@ -32,8 +32,9 @@
   &__no-results-container {
     text-align: center;
 
+    padding-block: 100px;
     @media screen and (min-width: 1366px) {
-      padding-top: 153px;
+      padding-block: 153px;
     }
   }
 }
