--- a/src/blocks/Podcasts/podcasts.scss
+++ b/src/blocks/Podcasts/podcasts.scss
@@ -1,9 +1,7 @@
 @import "@USupport-components-library/styles";
 
 .podcasts {
-  @include full-height-page-navbar;
-
-  padding-bottom: $spacing_3_2;
+  padding-bottom: 100px;
   text-align: left;
 
   @media screen and (min-width: $screen-md) {
