--- a/src/blocks/FAQ/faq.scss
+++ b/src/blocks/FAQ/faq.scss
@@ -16,4 +16,11 @@
   &__no-results {
     padding: $spacing_10_0;
   }
+
+  &__search {
+    width: 100%;
+    max-width: 50rem;
+    margin: 0 auto;
+    margin-bottom: $spacing_3_2;
+  }
 }
