--- a/src/blocks/PodcastView/podcast-view.scss
+++ b/src/blocks/PodcastView/podcast-view.scss
@@ -16,6 +16,14 @@
   &__title-item {
     margin-bottom: $spacing_1_6;
     text-align: left;
+
+    &__container {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+    }
   }
 
   &__details-item {
@@ -111,5 +119,20 @@
 
   &__label {
     margin: 0;
+  }
+
+  &__download {
+    border-radius: 25px;
+    border: 1px solid $color_blue_3d527b;
+    padding: 4px 12px;
+    margin-left: $spacing_1_0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+
+    & .icon {
+      margin: 0 !important;
+    }
   }
 }
