Add: send the user location in the reuest to get organizations

--- a/src/blocks/Organizations/organizations.scss
+++ b/src/blocks/Organizations/organizations.scss
@@ -8,6 +8,7 @@
     justify-content: space-between;
     align-items: center;
     padding-top: $spacing_2_4;
+    row-gap: $spacing_1_2;
 
     &__reset-filters-btn {
       display: none;
