Add: the GiveSuggestion block to each feature screen

--- a/src/pages/Consultations/consultations.scss
+++ b/src/pages/Consultations/consultations.scss
@@ -3,4 +3,10 @@
 
 .page__consultations {
   @include full-height-page-navbar;
+
+  & .give-suggestion__grid {
+    & .give-suggestion__heading-item {
+      place-self: center;
+    }
+  }
 }
