--- a/src/pages/MoodTrackHistory/mood-track-history.scss
+++ b/src/pages/MoodTrackHistory/mood-track-history.scss
@@ -3,4 +3,10 @@
 
 .page__mood-track-history {
   @include full-height-page-navbar;
+
+  & .give-suggestion__grid {
+    & .give-suggestion__heading-item {
+      place-self: center;
+    }
+  }
 }
