Add: the GiveSuggestion block to the Organizations page

--- a/src/pages/Organizations/organizations.scss
+++ b/src/pages/Organizations/organizations.scss
@@ -1,4 +1,9 @@
 @import "@USupport-components-library/styles";
 
 .page__organizations {
+  & .give-suggestion__grid {
+    & .give-suggestion__heading-item {
+      place-self: center;
+    }
+  }
 }
