Refactor: Heading alignment in GiveSuggestion block

--- a/src/blocks/GiveSuggestion/give-suggestion.scss
+++ b/src/blocks/GiveSuggestion/give-suggestion.scss
@@ -11,7 +11,7 @@
 
   &__heading-item {
     @media screen and (min-width: $screen_md) {
-      justify-self: left;
+      // justify-self: left;
     }
   }
 
