--- a/src/pages/BaselineAssesment/baseline-assesment.scss
+++ b/src/pages/BaselineAssesment/baseline-assesment.scss
@@ -7,6 +7,35 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    gap: 2rem;
+    margin-top: 2rem;
+
+    &__in-progress,
+    &__completed {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+      width: 100%;
+
+      h3 {
+        color: $color_blue_3d527b;
+        @include themify($themes, "color", "color_white_ff");
+        margin-bottom: 1rem;
+        text-align: center;
+      }
+    }
+
+    &__in-progress {
+      h3 {
+        color: $color_yellow_f9c74f;
+      }
+    }
+
+    &__completed {
+      h3 {
+        color: $color_green_7ec680;
+      }
+    }
   }
 }
