--- a/src/blocks/MyQA/my-qa.scss
+++ b/src/blocks/MyQA/my-qa.scss
@@ -22,13 +22,6 @@
 
   &__button-item {
     place-self: center;
-
-    @media screen and (min-width: $screen-md) {
-      justify-self: center;
-    }
-    @media screen and (min-width: $screen-lg) {
-      justify-self: end;
-    }
   }
 
   &__tabs-grid {
@@ -46,7 +39,7 @@
       }
       @media screen and (min-width: $screen-lg) {
         flex-direction: row;
-        justify-content: flex-start;
+        // justify-content: flex-start;
       }
 
       &__input {
@@ -69,7 +62,7 @@
         flex-direction: row;
       }
       @media screen and (min-width: $screen-lg) {
-        justify-content: flex-start;
+        // justify-content: flex-start;
       }
     }
 
