Add: highContrast mode to blocks and pages

--- a/src/blocks/Login/login.scss
+++ b/src/blocks/Login/login.scss
@@ -28,7 +28,7 @@
     }
 
     &__forgot-password {
-      padding-top: $spacing_1_2;
+      margin-top: $spacing_1_2;
     }
 
     &__content-item {
