--- a/src/blocks/ArticleView/article-view.scss
+++ b/src/blocks/ArticleView/article-view.scss
@@ -65,7 +65,8 @@
         $themes,
         "background-color",
         "color_blue_20809E_0_3",
-        "color_gray_66768d"
+        "color_gray_66768d",
+        "color_blue_20809E_0_3"
       );
       border-radius: $border_radius_2_5;
       padding: 0 $spacing_1_2 0 $spacing_1_2;
@@ -92,6 +93,7 @@
     &__download {
       border-radius: 25px;
       border: 1px solid $color_blue_3d527b;
+
       padding: 4px 12px;
       margin-left: $spacing_1_0;
       display: flex;
