--- a/src/blocks/RegisterAnonymous/register-anonymous.scss
+++ b/src/blocks/RegisterAnonymous/register-anonymous.scss
@@ -75,7 +75,7 @@
     &__login-button {
       margin: 0 auto;
       margin-top: $spacing_1_6;
-      padding-right: $spacing_4_0;
+      margin-right: $spacing_4_0;
     }
   }
 
