--- a/src/blocks/UserDetails/user-details.scss
+++ b/src/blocks/UserDetails/user-details.scss
@@ -84,5 +84,10 @@
   &__modal-heading {
     color: $color_primary_20809e;
     cursor: pointer;
+
+    &--hc {
+      color: white;
+      text-decoration: underline;
+    }
   }
 }
