Refactor: baseline assessment naming

--- a/src/blocks/BaselineAssesment/baseline-assesment.scss
+++ b/src/blocks/BaselineAssesment/baseline-assesment.scss
@@ -225,6 +225,11 @@
         }
       }
     }
+
+    &__save-for-later {
+      margin-inline: auto;
+      margin-top: $spacing_2_0;
+    }
   }
 
   // Error section
