Add: Poland banner to the Welcome block

--- a/src/blocks/Welcome/welcome.scss
+++ b/src/blocks/Welcome/welcome.scss
@@ -14,6 +14,10 @@
         color: $color_gray_66768d;
       }
 
+      &__pl-description {
+        margin-top: $spacing_1_2;
+      }
+
       &__logo {
         margin-top: $spacing_1_6;
         width: 22rem;
