--- a/src/blocks/Organizations/organizations.scss
+++ b/src/blocks/Organizations/organizations.scss
@@ -17,6 +17,16 @@
         display: block;
       }
     }
+
+    &__personalize-btn {
+      margin-inline: auto;
+      margin-top: $spacing_2_0;
+      margin-bottom: $spacing_2_0;
+
+      @media screen and (min-width: $screen_md) {
+        display: block;
+      }
+    }
   }
 
   &__dropdowns-container {
@@ -25,6 +35,19 @@
     flex-wrap: wrap;
     gap: $spacing_1_6;
     padding-block: $spacing_2_4;
+  }
+
+  &__specialisations-container {
+    width: 100%;
+    padding-bottom: $spacing_2_4;
+  }
+
+  &__specialisations-select {
+    width: 100%;
+
+    .select-container {
+      width: 100%;
+    }
   }
 
   &__grid {
