Add: success modal for the mood tracker

--- a/src/blocks/MoodTrackHistory/mood-track-history.scss
+++ b/src/blocks/MoodTrackHistory/mood-track-history.scss
@@ -90,6 +90,10 @@
     padding-top: $spacing_4_0;
   }
 
+  &__recommendations-no-results {
+    padding-top: $spacing_4_0;
+  }
+
   &__recommendations-container {
     padding-top: $spacing_1_6;
 
