Add: how it works modal to the MoodTrackHistory page

--- a/src/pages/MoodTrackHistory/mood-track-history.scss
+++ b/src/pages/MoodTrackHistory/mood-track-history.scss
@@ -9,4 +9,10 @@
       place-self: center;
     }
   }
+
+  &__heading-button-container {
+    display: flex;
+    flex-direction: column;
+    gap: $spacing_0_8;
+  }
 }
