--- a/src/blocks/Videos/videos.scss
+++ b/src/blocks/Videos/videos.scss
@@ -10,14 +10,9 @@
   }
 
   &__categories-item {
-    overflow-x: auto;
-    width: 35rem;
     padding-top: 30px;
-
-    @media screen and (min-width: 768px) {
-      width: auto;
-      margin: auto;
-    }
+    width: 100%;
+    justify-self: stretch;
   }
 
   &__videos-item {
