--- a/src/blocks/ArticlesDashboard/articles-dashboard.scss
+++ b/src/blocks/ArticlesDashboard/articles-dashboard.scss
@@ -19,6 +19,7 @@
   }
 
   &__categories-item {
+    justify-self: center;
     overflow-x: auto;
     // width: 35rem;
     padding-top: $spacing_1_0;
