Refactor: set minimum height for dashboard page to improve layout

--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -2,6 +2,7 @@
 @import "@USupport-components-library/styles";
 
 .page__dashboard {
+  min-height: 80vh;
   &__content {
     @include full-height-page-navbar;
   }
