--- a/src/modals/BaselineAssesmentModal/baseline-assesment-modal.scss
+++ b/src/modals/BaselineAssesmentModal/baseline-assesment-modal.scss
@@ -2,8 +2,18 @@
 
 .baseline-assesment-modal {
   &__content {
+    display: flex;
+    flex-direction: column;
+    
     p {
       font-size: 15px;
+      display: block;
+      margin-bottom: $spacing_1_6;
+      width: 100%;
+      
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
   &__privacy-content {
