--- a/src/blocks/ArticlesDashboard/articles-dashboard.scss
+++ b/src/blocks/ArticlesDashboard/articles-dashboard.scss
@@ -18,15 +18,19 @@
     padding: $spacing_10_0;
   }
 
+  &__articles-item {
+    min-width: 0;
+    overflow: hidden;
+    width: 100%;
+  }
+
   &__categories-item {
-    justify-self: center;
-    overflow-x: auto;
-    // width: 35rem;
+    min-width: 0;
+    overflow: hidden;
+    width: 100%;
     padding-top: $spacing_1_0;
 
     @media screen and (min-width: $screen-md) {
-      // width: auto;
-      // margin: auto;
       padding-top: $spacing_2_0;
     }
   }
