Add: implement organizations button in BaselineAssessmentResult and trigger personalization in Organizations component

--- a/src/blocks/BaselineAssesmentResult/baseline-assesment-result.scss
+++ b/src/blocks/BaselineAssesmentResult/baseline-assesment-result.scss
@@ -49,6 +49,10 @@
       text-align: left;
       margin-bottom: $spacing_1_6;
     }
+
+    &__interactive-map-button {
+      margin: $spacing_1_6 auto;
+    }
   }
 
   &__content-grid {
