--- a/src/blocks/Login/login.scss
+++ b/src/blocks/Login/login.scss
@@ -1,7 +1,7 @@
 @import "@USupport-components-library/styles";
 
 .login {
-  height: 100%;
+  height: 90vh;
 
   & .container {
     height: 100%;
@@ -10,25 +10,25 @@
   &__grid {
     place-items: center;
     text-align: left;
-    margin-top: $spacing_5_0;
+    padding-top: $spacing_1_6;
 
     &__logo-item {
       text-align: center;
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
     }
 
     &__inputs-item {
       &__input--password {
-        margin-top: $spacing_2_4;
+        margin-top: $spacing_1_6;
       }
 
       & .login-button {
-        margin-top: $spacing_4_8;
+        margin-top: $spacing_2_4;
       }
     }
 
     &__forgot-password {
-      margin-top: $spacing_1_2;
+      margin-top: $spacing_0_8;
     }
 
     &__content-item {
