--- a/src/blocks/BaselineAssesmentResult/baseline-assesment-result.scss
+++ b/src/blocks/BaselineAssesmentResult/baseline-assesment-result.scss
@@ -28,13 +28,32 @@
 
   &__compare-grid {
     align-items: center;
-    &__item {
+
+    &__stats-container {
       display: flex;
-      align-items: center;
+      flex-direction: column;
+      gap: $spacing_1_6;
       justify-content: center;
-      gap: $spacing_0_4;
-      padding: $spacing_1_6;
-      margin-top: $spacing_1_2;
+
+      @media screen and (min-width: $screen-lg) {
+        flex-direction: row;
+      }
+
+      &__item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: $spacing_0_4;
+        padding: $spacing_1_6;
+        width: 100%;
+        max-width: 30rem;
+        margin-inline: auto;
+
+        @media screen and (min-width: $screen-lg) {
+          margin-inline: 0;
+          width: 20%;
+        }
+      }
     }
   }
 
