--- a/src/blocks/SelectProvider/select-provider.scss
+++ b/src/blocks/SelectProvider/select-provider.scss
@@ -7,6 +7,7 @@
     place-items: center;
     padding-top: $spacing_3_0;
     padding-bottom: $spacing_4_0;
+    gap: $spacing_2_0;
 
     &__item-no-match {
       padding-top: $spacing_2_4;
