Refactor: update SelectProvider component to adjust provider name display and enhance styles for better layout

--- a/src/blocks/SelectProvider/select-provider.scss
+++ b/src/blocks/SelectProvider/select-provider.scss
@@ -14,12 +14,15 @@
     }
 
     @media screen and (min-width: $screen_md) {
+
       &__provider {
         justify-self: start;
+        height: 100%;
       }
 
       &__provider:nth-child(odd) {
         justify-self: end;
+        height: 100%;
       }
     }
   }
