Refactor: mascot-welcome-header block min width

--- a/src/blocks/MascotWelcomeHeader/mascot-welcome-header.scss
+++ b/src/blocks/MascotWelcomeHeader/mascot-welcome-header.scss
@@ -2,7 +2,7 @@
 
 .mascot-welcome-header {
   padding: 0;
-  min-width: 38.1rem;
+  min-width: calc(34rem - 2 * $spacing_1_6);
 
   &__banner {
     text-align: left;
